--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -73,6 +73,9 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .form-group-disabled {
   opacity: 0.7;
 }
+.form-group-md {
+  max-width: 160px !important;
+}
 .form-inline .form-control:last-child {
   margin-bottom: 5px;
 }
