--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -86,6 +86,10 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     opacity: 0.7;
 }
 
+.form-group-md {
+    max-width: 160px !important;
+}
+
 .form-inline .form-control:last-child {
     margin-bottom: 5px;
 }
