--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -145,6 +145,11 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     opacity: 1 !important;
 }
 
+.btn-link.btn-xs {
+    padding: 0;
+    font-size: 1.2rem;
+}
+
 .field-validation-error {
     color: @danger;
 }
