--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -133,6 +133,10 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .btn-link {
   opacity: 1 !important;
 }
+.btn-link.btn-xs {
+  padding: 0;
+  font-size: 1.2rem;
+}
 .field-validation-error {
   color: #b94a48;
 }
