MZ-27 Add CategoryNotification Entity With DB Migration Add NotificationService Add UserController.Notifications() With View Move ~/Area/admin/Products/Views/ProductCategories.cshtml  to ~/Views/Shared. Change Product Edit View to Call ~/Area/admin/Products/Views/ProductCategories.cshtml And send the model

--- a/src/Mzayad.Web/Views/Shared/_Layout.User.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.User.cshtml
@@ -10,6 +10,7 @@
     <div class="col-lg-3 col-md-4 col-sm-5">
         <ul class="menu-list">
             <li><a href="@Url.Action("EditAccount")"><i class="fa fa-fw fa-pad-right fa-user"></i>@Global.EditAccount</a></li>
+            <li><a href="@Url.Action("Notifications")"><i class="fa fa-fw fa-pad-right fa-user"></i>@Global.CategoryNotification</a></li>
             <li><a href="@Url.Action("ChangePassword")"><i class="fa fa-fw fa-pad-right fa-lock"></i>@Global.ChangePassword</a></li>
         </ul>
     </div>
