--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -122,7 +122,7 @@
             <section>
                 <div class="form-group">
                     @Html.Label("Categories")
-                    @Html.Partial("ProductCategories", new { Model.Categories, Model.SelectedCategories })
+                    @Html.Partial("ProductCategories",Model)
                 </div>
             </section>
 
