MZ-27 Add Javascript Conditions
If a parent category is checked automatically check all child categories.
If a parent category is unchecked automatically uncheck all child categories.
If all child categories get checked manually, automatically check the parent category.

--- a/src/Mzayad.Web/Views/User/Notifications.cshtml
+++ b/src/Mzayad.Web/Views/User/Notifications.cshtml
@@ -5,6 +5,32 @@
     
 }
 
+@section styles
+{
+    
+<style>
+    .disabledLabel {
+        color: grey;
+    }
+
+    .disabledCheckbox {
+        opacity: .5;
+    }
+
+    .categoriesList {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    .childCategoriesList {
+        list-style-type: none;
+        padding-left: 20px;
+    }
+</style>
+
+
+
+}
 
 
 <div class="row">
@@ -33,6 +59,65 @@
 
 @section Scripts {
     @Scripts.Render("/js/validate")
+    <script type="text/javascript">
+
+
+        $(function() {
+
+            var onCategoryChange = function() {
+                var checkbox = $(this);
+                var checked = checkbox.is(":checked");
+                var categoryId = checkbox.val();
+                var parentCategoryId = checkbox.attr('parentId');
+                var childCheckbox;
+
+                if (checked) {
+                    
+                    childCheckbox = $("input[parentId='" + categoryId + "']");
+                    childCheckbox.prop('checked', checked).each(onCategoryChange);
+
+                    var sameLevel = $("input[parentId='" + parentCategoryId + "']");
+                    var allChecked = true;
+                    sameLevel.each(function () {
+                        
+                        if (! $(this).is(":checked")) {
+                            allChecked = false;
+                        }
+                    });
+
+                    if (allChecked) {
+                        var parentCheckbox = $("#Category" + parentCategoryId);
+                        visuallyDisable(parentCheckbox);
+                        parentCheckbox.prop('checked', checked).each(onCategoryChange);
+                    }
+
+
+                }
+
+                if (!checked) {
+                    visuallyEnable(checkbox);
+                    childCheckbox = $("input[parentId='" + categoryId + "']");
+                    childCheckbox.prop('checked', checked).each(onCategoryChange);
+                }
+            };
+
+            var visuallyDisable = function(checkbox) {
+                if (!checkbox.is(":checked")) {
+                    checkbox.addClass("disabledCheckbox");
+                    checkbox.parent().addClass("disabledLabel");
+                }
+            };
+
+            var visuallyEnable = function(checkbox) {
+                checkbox.removeClass("disabledCheckbox");
+                checkbox.parent().removeClass("disabledLabel");
+            };
+
+            $("[name='SelectedCategories']").on("change", onCategoryChange);
+
+        });
+
+    </script>
 }
 
 
