--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -16,7 +16,7 @@ form section, section.form-section {
     margin-top: 15px;
     padding: 32px 0 0 0;
     background: none;
-    border-top: 1px solid @base;
+    border-top: 1px solid #eee;
     text-align: right;
 }
 
