--- a/src/Mzayad.Web/Views/User/Notifications.cshtml
+++ b/src/Mzayad.Web/Views/User/Notifications.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Mzayad.Web.Models.User.NotificationModelView
 
 @{
-    ViewBag.Title = Global.CategoryNotification;
+    ViewBag.Title = Global.Notifications;
     
 }
 
