--- a/src/Mzayad.Web/Content/site.less
+++ b/src/Mzayad.Web/Content/site.less
@@ -23,11 +23,15 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: @font-size + 0.9;
+    font-size: @font-size + 0.8;
 }
 
 h2 {
-    font-size: @font-size + 0.7;
+    font-size: @font-size + 0.5;
+}
+
+p {
+    margin-bottom: 1em;
 }
 
 .lead {
