--- a/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Products/Edit.cshtml
@@ -331,7 +331,10 @@
                 };
 
                 $(".specification-group")
-                    .each(function () {
+                    .each(function (index) {
+                        if (index === 0) {
+                            return;
+                        }
                         hideSpecificationGroup($(this));
                     })
                     .each(function () {
