--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     @RenderSection("scripts", false)
     <script>
         $(function() {
-            $("a[disabled").on("click", function(e) {
+            $("a[disabled]").on("click", function(e) {
                 e.preventDefault();
             });
         })
