--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -124,7 +124,7 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     letter-spacing: 2px;
 
     @media @media-smallscreen {
-        font-size: 14px;
+        font-size: 1.4rem;
     }
 
     &:lang(ar) {
