--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -19,3 +19,28 @@
     padding-bottom: 0.5em;
     border-bottom: 1px solid #eee;
 }
+
+#auction-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    > li {
+        margin-bottom: 30px;
+        padding: 20px;
+        border: 1px solid #dbdbdb;
+        background-color: white;
+        
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        h2 {
+            color: @base;
+            font-size: 4.8rem;
+            margin-bottom: 20px;
+        }
+    }
+
+    
+}
