--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -21,26 +21,44 @@
 }
 
 #auction-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-
     > li {
         margin-bottom: 30px;
         padding: 20px;
         border: 1px solid #dbdbdb;
         background-color: white;
-        
+
         &:last-child {
             margin-bottom: 0;
         }
 
-        h2 {
-            color: @base;
-            font-size: 4.8rem;
-            margin-bottom: 20px;
+        .auction-details {
+            border-bottom: 2px solid #dbdbdb;
+
+            .auction-detail-item {
+                margin-bottom: 20px;
+            }
+
+            h2 {
+                color: @base;
+                font-size: 4.8rem;
+            }
+
+            ul {
+                -moz-column-count: 2;
+                -webkit-column-count: 2;
+                column-count: 2;
+            }  
+        }
+
+        .upcoming-date {
+            margin: 25px auto !important;
+            padding: 25px;
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 4.2rem;
+            font-weight: bold;
+            color: #fff;
+            background: @base;
         }
     }
-
-    
 }
