--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Mzayad.Core.Formatting
+@using Mzayad.Models.Enum
 @using OrangeJetpack.Base.Web
 @model IEnumerable<Mzayad.Models.Auction>
 
@@ -80,7 +81,7 @@
     {
         <li>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-6">
                     <div class="auction-details">
                         <h2 class="auction-detail-item">@auction.Title</h2>
                         @if (auction.Product.ProductSpecifications.Any())
@@ -94,14 +95,33 @@
                         }
                         <div class="auction-detail-item">Retail price: @CurrencyFormatter.Format(auction.RetailPrice)</div>
                     </div>
-                    @if (auction.StartUtc > DateTime.UtcNow || true)
-                    {
-                        <div class="upcoming-date">
-                            @DateTimeFormatter.ToLocalTime(auction.StartUtc, DateTimeFormatter.Format.Full)
-                        </div>
-                    }
+                    <div class="auction-status">
+                        @if (auction.Status == AuctionStatus.Closed)
+                        {
+                            <div class="status-closed">
+                                <div class="auction-status-label">Closed</div>
+                                <div class="auction-status-details">...</div>
+                            </div>
+                        }
+                        else if (auction.IsLive())
+                        {
+                            <div class="status-live">
+                                <div class="auction-status-label">Live</div>
+                                <div class="auction-status-details">...</div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="status-upcoming">
+                                <div class="auction-status-label">Upcoming</div>
+                                <div class="auction-status-details">
+                                    @DateTimeFormatter.ToLocalTime(auction.StartUtc, DateTimeFormatter.Format.Full)
+                                </div>
+                            </div>
+                        }
+                    </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6 text-center">
                     <img class="img-responsive" src="@auction.Product.MainImage().ImageMdUrl" alt="@auction.Title">
                 </div>
             </div>
