--- a/src/Mzayad.Web/Views/Home/SignalR.cshtml
+++ b/src/Mzayad.Web/Views/Home/SignalR.cshtml
@@ -23,9 +23,9 @@
 
     <ul></ul>
 
-    <script src="~/scripts/jquery-2.1.3.js"></script>
-    <script src="~/Scripts/jquery.signalR-2.2.0.js"></script>
-    <script src="signalr/hubs"></script>
+    <script src="/scripts/jquery-2.1.3.js"></script>
+    <script src="/scripts/jquery.signalR-2.2.0.js"></script>
+    <script src="/signalr/hubs"></script>
     <script>
         $(function () {
 
@@ -47,7 +47,7 @@
             $("button").on("click", function() {
                 console.log("click");
 
-                auctionHub.server.submitBid();
+                auctionHub.server.submitBid(1);
             });
 
         });
