--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
             <li><a href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-cube"></i>Products</a></li>
             <li><a href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
             <li><a href="@Url.Action("Index", "Specifications")"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
+            <li><a href="@Url.Action("Index", "Sponsors")"><i class="fa fa-fw fa-pad-right fa-hand-o-right"></i>Sponsors</a></li>
             <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li> 
             <li><a href="@Url.Action("Index", "Docs")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li> 
             <li><a disabled href="@Url.Action("Index", "Reports")"><i class="fa fa-fw fa-pad-right fa-bar-chart"></i>Reports</a></li>
